client/src/css/style.css
/* ... */
h1 {
  color: red;
  margin: 0;
  font-weight: 700;
  font-size: 1.7rem;
  letter-spacing: 0.03rem;
  text-shadow: 2px 2px 25px rgba(255, 0, 0, 0.1);
}
h2 {
  margin: 0;
  color: red;
  font-size: 1.5rem;
  font-weight: normal;
}
button {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 5px;
  outline: none;
  background: linear-gradient(#e20d0d, #B02020);
  color: white;
  font-weight: bold;
  font-size: .95rem;
  padding: 6px 16px;
  border: 1px solid black;
  box-shadow: 1px 1px rgba(0, 0, 0, 0.2);
}
button[disabled]:hover {
  cursor:not-allowed;
}
button > .button-large {
  font-size: 1.5rem;
  padding-right: 10px;
}
button:active {
  background: linear-gradient(300deg, #E20D0D, #B02020);
  box-shadow: 0px 0px 8px #B02020;
}
/* BODY */
body {
  min-height: 100vh;
}

/* WHOLE APP CONTAINER */
.container {
  padding: 0;
}

/* LOGIN FORM */
.login-background {
  /* Needed to bring overlay to the top */
  position: fixed;
  z-index: 1001;
  top: 0;
  /* Make it stretch whole screen */
  width: 100vw;
  height: 100vh;
  /* To make the actual "form" (child div) be centered */
  display: flex;
  align-items: center;
  justify-content: center;
  /* So 0 height doesn;t mess it up */
  overflow: hidden;
}
.login-background:before {
  /* The overlay is done as :before to have opacity on background while
  having no transparency on the child 'form' */
  content: ' ';
  position: absolute;
  /* Force the 'overlay' to cover whole screen */
  width: 100vw;
  height: 100vh;
  /* Give it opaque background */
  background: black;
  opacity: .8;
  /* The banner is also opaque (at z-index 999, so make this higher) */
  z-index: 1000;
}
.login-background__hide {
  height: 0;
}
.login-background > .login-form {
  z-index: 1001;
  background: white;
  width: 55%;
  height: 80%;
  border-radius: 8px;
  display: grid;
  grid-template-columns: 1fr;
  padding: 5px 25px;
  align-items: center;
  justify-items: center;
  grid-template-rows: 50px 110px repeat(auto-fit, 50px);
}
/* .login-form > h1 {
  margin: 0;
  padding: 0;
} */
.login-form > .login-form__close {
  font-size: 2rem;
  font-weight: bold;
  grid-column: 2;
  cursor: pointer;
}
.login-form > .login-form__close:hover {
  text-decoration: none;
}
.login-form > p {
  align-self: flex-start;
}
.login-form > button {
  grid-column: 1 / -1;
  width: 40%;
}

/* CART */
.cart {
  position: fixed;
  top: 0;
  width: 40%;
  height: 100vh;
  background: white;
  /* ENsure it is behind the overlay for login! */
  z-index: 1000;
  right: 0px;
  display: grid;
  grid-gap: 10px 0;
  grid-template-columns: 1fr 35px;
  grid-template-rows: 45px 45px repeat(auto-fit, 70px);
  padding: 5px 15px;
  box-shadow: -5px 0 20px rgba(0, 0, 0, 0.4);
  overflow-y: scroll;
}
 .cart .cart__close {
  font-size: 2rem;
  font-weight: bold;
  text-align: right;
  grid-column: 2;
  cursor: pointer;
}
/* .cart .cart_message {
  grid-column: span 2;
  margin: 0;
} */
.cart span {
  grid-column: span 2;
}
.cart .cart__item {
  grid-column: span 2;
  /* margin: 8px 0; */
  display: grid;
  grid-template-areas: "image title close" "image region close";
  padding: 15px 0;
  border-bottom: 1px solid lightgray;
  grid-template-columns: 75px 1fr 15px;
  grid-gap: 0 5px;
}
.cart .cart__item:last-child {
  border-bottom: none;
}
.cart__item img {
  max-width: 70px;
  border: 1px solid black;
  border-radius: 2px;
  grid-area: image;
  align-self: center;
  justify-self: center;
}
.cart__item .cart__item-title {
  margin: 0;
  grid-area: title;
  display: flex;
  align-items: flex-end;
}
.cart__item .cart__item-title a {
  font-size: 1.1rem;
  margin: 0;
}
.cart__item .cart__item-region {
  grid-area: region;
  font-size: 0.88rem;
  margin: 0;
}
.cart__item .cart__item-delete {
  grid-area: close;
  cursor: pointer;
  align-self: center;
  font-weight: bold;
}

/* ANIMATIONS FOR SHOPPING CART COMING IN  */
.cart-enter {
  max-width: 0;
}
.cart-enter.cart-enter-active {
  max-width: 50%;
  transition: all 450ms cubic-bezier(1,0,.41,1.24);
}
.cart-leave {
  max-width: 50%;
}
.cart-leave.cart-leave-active {
  max-width: 0;
  transition: all 450ms cubic-bezier(.5,.06,.58,1.47);
}
/* ANIMATIONS FOR SHOPPING CART ITEMS LEAVING  */
.cart-item-leave {
  max-height: 100%;
  /* padding: 0;
  margin: 0;
  overflow: hidden; */
}
.cart-item-leave.cart-item-leave-active {
  max-height: 0%;
  transition: all 200ms linear; /*cubic-bezier(1,0,.41,1.24);*/
}


/* TOP NAV */
nav {
  box-shadow: 0 3px 25px rgba(0, 0, 0, 0.5);
  padding: 10px;
  background: red;
  display: grid;
  grid-template-columns: 1fr repeat(3, auto);
  grid-gap: 25px;
  align-items: stretch;
  max-height: 12vh;
  border-bottom: 2px solid black;
  transition: all 0.3s;
}
nav > * {
  display: block;
  flex: 1;
  text-align: center;
  /* Ensure all items are vertically centered (it's for the login image in nav bar) */
  display: flex;
  align-items: center;
}
nav > a:hover {
  text-decoration: none;
}

nav > .nav__title {
  font-size: 1.9rem;
  transform: skew(-6deg) rotateZ(.3deg);
  letter-spacing: .15rem;
  font-weight: bold;
  text-align: left;
  color: white;
  text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
}
.nav__user-image {
  height: 28px;
  padding: 0 10px;
  border-radius: 50%;
}
nav > a:not(.nav__title) {
  background: maroon;
  padding: 5px 10px;
  border-radius: 5px;
  color: white;
  font-weight: bold;
}
nav a:not(.nav__title):hover {
  background: darkred;
}

/* DISCOVER TILE */
.discover-tile {
  text-align: center;
  font-weight: 100;
  height: 40vh;
  font-size: 1.8rem;
  margin: 10px 0 50px 0;
  background: wheat;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
.discover-tile a:active {
  background: linear-gradient(300deg, #E20D0D, #B02020);
  box-shadow: 0px 0px 8px #B02020;
}
.discover-tile a:hover {
  text-decoration: none;
}
/* ... */

